ajout enum ansi que bugs regler